src/test/ui/consts/const-eval/heap/alloc_intrinsic_uninit.64bit.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/alloc_intrinsic_uninit.rs:8:1
   |
LL | const BAR: &i32 = unsafe { &*(intrinsics::const_allocate(4, 4) as *mut i32) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .<deref>: encountered uninitialized bytes, but expected initialized plain (non-pointer) bytes
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 8) {
               ╾───────alloc2────────╼                         │ ╾──────╼
           }

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
